"Invalid call to memory usage tracker, could not find function" with explain, executonStats, $sample size 0

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.10
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Execution
    • Fully Compatible
    • ALL
    • v8.0
    • Hide
       
      foo.aggregate([ {'$count': 'num'}, {'$sample': {'size': 0}}]).explain("executionStats")
      MongoServerError[Location5466400]: Invalid call to memory usage tracker, could not find function num
      

       

      Show
        foo.aggregate([ { '$count' : 'num' }, { '$sample' : { 'size' : 0}}]).explain( "executionStats" ) MongoServerError[Location5466400]: Invalid call to memory usage tracker, could not find function num  
    • QE 2024-07-22, QE 2024-08-05, QE 2024-08-19, QE 2024-09-02, QE 2024-09-16
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Calling explain + executionStats on a pipeline that contains $sample with size=0 results in

      MongoServerError[Location5466400]: Invalid call to memory usage tracker, could not find function num
      

       

      or 

      Invalid call to memory usage tracker, could not find function count 

            Assignee:
            Ivan Fefer (Inactive)
            Reporter:
            Philip Stoev
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: