SERVER-92320 Return 0 if reading memory usage from non-existing tracker (#24941)

GitOrigin-RevId: e270f5eafb20cd14e95703b1c05a24a8f57f9dae